--- a/src/styles/player.css
+++ b/src/styles/player.css
@@ -92,3 +92,83 @@ button {
   font-size: var(--fs-xxl);
   font-weight: var(--fw-black);
 }
+
+.progressbar {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 16px;
+  color: var(--color-green-dark);
+  border-radius: var(--quarter);
+  margin-top: var(--m);
+  outline: none;
+}
+
+/* Chrome, Safari, Edge */
+.progressbar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px; /* Größe des gelben Punkts */
+  height: 16px;
+  background: var(--color-pink);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.progressbar::-webkit-slider-runnable-track {
+  height: 16px;
+  background: var(--color-green-dark);
+  border-radius: 8px;
+}
+
+/* Firefox */
+.progressbar::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background: var(--color-pink);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.progressbar::-moz-range-track {
+  height: 16px;
+  background: var(--color-green-dark);
+  border-radius: 8px;
+}
+
+/* IE, Edge (alt) */
+.progressbar::-ms-thumb {
+  width: 16px;
+  height: 16px;
+  background: var(--color-pink);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.progressbar::-ms-track {
+  height: 16px;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+.progressbar::-ms-fill-lower {
+  background: var(--color-green-dark);
+  border-radius: 8px;
+}
+
+.progressbar::-ms-fill-upper {
+  background: var(--color-green-dark);
+  border-radius: 8px;
+}
+
+.time-display {
+  display: flex;
+  justify-content: space-between;
+  font-size: var(--fs-xs);
+  font-weight: var(--fw-regular);
+  color: var(--color-green-dark);
+  margin-top: var(--xxs);
+}
+
