--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,6 +3,7 @@
   --color-green-light: rgb(71, 82, 63);
   --color-yellow: rgb(242, 221, 114);
   --color-lightest: rgb(245, 245, 245);
+  --color-pink: rgb(249, 154, 205);
 
   --ff-primary: "Inter", sans-serif;
   --ff-logo: "Nohemi", sans-serif;
@@ -24,6 +25,7 @@
   --fs-xl: 48px;
   --fs-xxl: 96px;
 
+  --xxs: 8px;
   --xs: 14px;
   --s: 26px;
   --m: 32px;
